--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,8 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@arcjet/inspect": "^1.0.0-beta.13",
+    "@arcjet/node": "^1.0.0-beta.13",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
