--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.13.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.12.0",
+    "socket.io-client": "^4.8.3",
     "tailwindcss": "^4.1.16",
     "zustand": "^5.0.9"
   },
